--- a/docker-workshop/1-nginx/level_2/web/index.html
+++ b/docker-workshop/1-nginx/level_2/web/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="SevenCode consultancy services, software development, webdevelopment">
+    <meta name="description" content="Hello world">
     <meta name="author" content="Nelson Neves">
     <link rel="icon" href="favicon.ico">
 
-    <title>SevenCode: consultancy services, software development, webdevelopment.</title>
+    <title>Hello world</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
