NGNIX React APp

--- a/docker-workshop/1-nginx/level_3/web/index.html
+++ b/docker-workshop/1-nginx/level_3/web/index.html
@@ -26,7 +26,7 @@
 
     <div class="jumbotron">
       <div class="container">
-        <p>Demo 3</p>
+        <p>Wow. You have done it. Please go to next stage.</p>
       </div>
     </div>
 
